<resources>
    <string name="app_name">Bank App</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Log In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="do_not_have_account">Don\'t have account?</string>
    <string name="create_account">Create Account</string>
    <string name="open_new_account">Open New Account</string>
    <string name="open_account">Open Account</string>
    <string name="accounts">Accounts</string>
    <string name="account_type">%1$s Account</string>
    <string name="balance">Balance</string>
    <string name="acc_balance">\u20B9 %1$s</string>
    <string name="savings">Savings</string>
    <string name="current">Current</string>
    <string name="loan">Loan</string>
    <string name="no_account_exist">No bank account linked with this customer ID. Open a new account?</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="account_details">Account Details</string>
    <string name="enter_deposit_amount">Enter deposit amount</string>
    <string name="enter_initial_deposit_amount">"Enter Initial Deposit Amount "</string>
    <string name="interest_rate">Interest Rate(/yo)</string>
    <string name="age">Age</string>
    <string name="net_relationship_value">Net Relationship Value(/mo)</string>
    <string name="transaction_history">Transaction History</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="transfer">Transfer</string>
    <string name="account_number">Account Number</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="atm_card_number">ATM Card Number</string>
    <string name="cvv">CVV</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="add_money">Add Money</string>
</resources>