<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:background="@drawable/account_option_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_acc_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_account_type"
            android:textSize="20sp"
            android:textColor="@color/primary600"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/savings_acc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/cta_text_bg"
            android:paddingVertical="18dp"
            android:text="@string/savings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_acc_type_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/current_acc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/cta_text_bg"
            android:paddingVertical="18dp"
            android:text="@string/current"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savings_acc_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loan_acc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/cta_text_bg"
            android:paddingVertical="18dp"
            android:text="@string/loan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_acc_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
