<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:background="@drawable/account_option_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_money_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_money"
            android:textSize="20sp"
            android:textColor="@color/primary600"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_deposit_amount"
            android:textColorHint="@color/grey600"
            app:boxBackgroundColor="@color/primary100"
            app:boxStrokeColor="@color/primary500"
            app:boxStrokeWidth="1dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/deposit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/add_money_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/grey900" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deposit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/cta_text_bg"
            android:paddingVertical="18dp"
            android:text="@string/deposit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
