<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/account_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toTopOf="@+id/create_new_acc_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/account_list_layout"
            tools:itemCount="4"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create_new_acc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/cta_text_bg"
            android:paddingVertical="18dp"
            android:text="@string/open_new_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounts"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:textSize="32sp"
            android:textColor="@color/primary600"
            android:lineSpacingExtra="-8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/primary500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_account_circle_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/no_account_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/no_account_exist"
            android:padding="20dp"
            android:textColor="@color/grey600"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
